--- a/GenericTSQLCollector/packages/repositories.config
+++ b/GenericTSQLCollector/packages/repositories.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\ExtendedTSQLCollector\packages.config" />
+  <repository path="..\ExtendedTSQLUploader\packages.config" />
   <repository path="..\GenericTSQLCollector\packages.config" />
   <repository path="..\GenericTSQLUploader\packages.config" />
   <repository path="..\InstallCollectorType\packages.config" />
