--- a/GenericTSQLCollector/packages/repositories.config
+++ b/GenericTSQLCollector/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\CollectionSetManager\packages.config" />
   <repository path="..\ExtendedTSQLCollector\packages.config" />
   <repository path="..\ExtendedTSQLUploader\packages.config" />
   <repository path="..\GenericTSQLCollector\packages.config" />
