--- a/GenericTSQLCollector/Common/Common.csproj
+++ b/GenericTSQLCollector/Common/Common.csproj
@@ -64,11 +64,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Alert.cs" />
     <Compile Include="CollectionItemConfig.cs" />
     <Compile Include="CollectorConfig.cs" />
     <Compile Include="CollectorLogger.cs" />
     <Compile Include="CollectorUtils.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TSQLCollectionItemConfig.cs" />
+    <Compile Include="TSQLCollectorConfig.cs" />
+    <Compile Include="XEReaderCollectionItemConfig.cs" />
+    <Compile Include="XEReaderCollectorConfig.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
