--- a/GenericTSQLCollector/Common/Common.csproj
+++ b/GenericTSQLCollector/Common/Common.csproj
@@ -64,7 +64,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Alert.cs" />
+    <Compile Include="AlertConfig.cs" />
     <Compile Include="CollectionItemConfig.cs" />
     <Compile Include="CollectorConfig.cs" />
     <Compile Include="CollectorLogger.cs" />
@@ -72,6 +72,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TSQLCollectionItemConfig.cs" />
     <Compile Include="TSQLCollectorConfig.cs" />
+    <Compile Include="Uploader.cs" />
     <Compile Include="XEReaderCollectionItemConfig.cs" />
     <Compile Include="XEReaderCollectorConfig.cs" />
   </ItemGroup>
