--- a/GenericTSQLCollector/packages/repositories.config
+++ b/GenericTSQLCollector/packages/repositories.config
@@ -3,6 +3,7 @@
   <repository path="..\CollectionSetManager\packages.config" />
   <repository path="..\ExtendedTSQLCollector\packages.config" />
   <repository path="..\ExtendedTSQLUploader\packages.config" />
+  <repository path="..\ExtendedXEReaderUploader\packages.config" />
   <repository path="..\GenericTSQLCollector\packages.config" />
   <repository path="..\GenericTSQLUploader\packages.config" />
   <repository path="..\InstallCollectorType\packages.config" />
