--- a/GenericTSQLCollector/InstallCollectorType/InstallCollectorType.csproj
+++ b/GenericTSQLCollector/InstallCollectorType/InstallCollectorType.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{E56AF20F-59B8-46CB-A108-84F2781D834E}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>InstallCollectorType</RootNamespace>
+    <RootNamespace>Sqlconsulting.DataCollector.InstallCollectorType</RootNamespace>
     <AssemblyName>InstallCollectorType</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -61,6 +61,11 @@
     <Compile Include="CollectorTypeInstaller.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -71,6 +76,18 @@
       <Project>{b9f55a86-b918-416d-8020-181a5728aaa6}</Project>
       <Name>Common</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Resources\XEReaderParamSchema.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Resources\XEReaderParamFormatter.xslt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
