--- a/GenericTSQLCollector/ExtendedXEReaderCollector/ExtendedXEReaderCollector.csproj
+++ b/GenericTSQLCollector/ExtendedXEReaderCollector/ExtendedXEReaderCollector.csproj
@@ -83,7 +83,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="app.config" />
+    <None Include="app.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.0">
