--- a/GenericTSQLCollector/ExtendedXEReaderCollector/ExtendedXEReaderCollector.csproj
+++ b/GenericTSQLCollector/ExtendedXEReaderCollector/ExtendedXEReaderCollector.csproj
@@ -12,6 +12,7 @@
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
+    <IsWebBootstrapper>false</IsWebBootstrapper>
     <PublishUrl>publish\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
@@ -24,7 +25,6 @@
     <MapFileExtensions>true</MapFileExtensions>
     <ApplicationRevision>0</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
-    <IsWebBootstrapper>false</IsWebBootstrapper>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
@@ -60,16 +60,37 @@
     <Reference Include="CommandLine">
       <HintPath>..\packages\CommandLineParser.1.9.71\lib\net35\CommandLine.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.SqlServer.XE.Core">
+      <HintPath>..\packages\Tx.SqlServer.1.0.40516\lib\Net40\Microsoft.SqlServer.XE.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.SqlServer.XEvent">
+      <HintPath>..\packages\Tx.SqlServer.1.0.40516\lib\Net40\Microsoft.SqlServer.XEvent.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.SqlServer.XEvent.Configuration">
+      <HintPath>..\packages\Tx.SqlServer.1.0.40516\lib\Net40\Microsoft.SqlServer.XEvent.Configuration.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.SqlServer.XEvent.Linq, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=x86">
-      <HintPath>C:\Program Files (x86)\Microsoft SQL Server\110\Tools\Binn\ManagementStudio\Extensions\Application\Microsoft.SqlServer.XEvent.Linq.dll</HintPath>
       <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Tx.SqlServer.1.0.40516\lib\Net40\Microsoft.SqlServer.XEvent.Linq.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.SqlServer.XEvent.Targets">
+      <HintPath>..\packages\Tx.SqlServer.1.0.40516\lib\Net40\Microsoft.SqlServer.XEvent.Targets.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Reactive">
+      <HintPath>..\packages\Rx-Main.1.0.11226\lib\Net4\System.Reactive.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="Tx.Core">
+      <HintPath>..\packages\Tx.Core.1.0.40516\lib\Net40\Tx.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="Tx.SqlServer">
+      <HintPath>..\packages\Tx.SqlServer.1.0.40516\lib\Net40\Tx.SqlServer.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Collector.cs" />
@@ -86,6 +107,7 @@
     <None Include="app.config">
       <SubType>Designer</SubType>
     </None>
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.0">
@@ -108,6 +130,10 @@
       <ProductName>Windows Installer 4.5</ProductName>
       <Install>true</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="msvcr100.dll" />
+    <Content Include="xe.dll" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
