--- a/GenericTSQLCollector/ExtendedXEReaderCollector/app.config
+++ b/GenericTSQLCollector/ExtendedXEReaderCollector/app.config
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
+<configuration>
+  <startup>
+  <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
+  </startup>
+</configuration>
 
+<!--
 <configuration>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -23,3 +29,4 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
   </startup>
 </configuration>
+-->
