--- a/GenericTSQLCollector/packages/repositories.config
+++ b/GenericTSQLCollector/packages/repositories.config
@@ -4,6 +4,7 @@
   <repository path="..\ExtendedTSQLCollector\packages.config" />
   <repository path="..\ExtendedTSQLUploader\packages.config" />
   <repository path="..\ExtendedXEReaderCollector\packages.config" />
+  <repository path="..\ExtendedXEReaderCollectorTrigger\packages.config" />
   <repository path="..\ExtendedXEReaderUploader\packages.config" />
   <repository path="..\GenericTSQLCollector\packages.config" />
   <repository path="..\GenericTSQLUploader\packages.config" />
