--- a/GenericTSQLCollector/Common/Common.csproj
+++ b/GenericTSQLCollector/Common/Common.csproj
@@ -65,17 +65,35 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AlertConfig.cs" />
+    <Compile Include="AlertDispatcher.cs" />
     <Compile Include="CollectionItemConfig.cs" />
     <Compile Include="CollectorConfig.cs" />
     <Compile Include="CollectorLogger.cs" />
     <Compile Include="CollectorUtils.cs" />
     <Compile Include="DataTableTSQLAdapter.cs" />
+    <Compile Include="EmailAlertDispatcher.cs" />
+    <Compile Include="Enum.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="TSQLCollectionItemConfig.cs" />
     <Compile Include="TSQLCollectorConfig.cs" />
     <Compile Include="Uploader.cs" />
     <Compile Include="XEReaderCollectionItemConfig.cs" />
     <Compile Include="XEReaderCollectorConfig.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Resources\DataTableHtmlXslt.xml" />
+    <Content Include="Resources\HtmlTableStyle.css" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
