--- a/GenericTSQLCollector/CollectionSetManager/CollectionSetManager.csproj
+++ b/GenericTSQLCollector/CollectionSetManager/CollectionSetManager.csproj
@@ -68,6 +68,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\CommandLineParser.1.9.71\lib\net35\CommandLine.dll</HintPath>
     </Reference>
+    <Reference Include="ICSharpCode.TextEditor">
+      <HintPath>..\packages\ICSharpCode.TextEditor.3.2.1.6466\lib\Net20\ICSharpCode.TextEditor.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -127,6 +130,12 @@
     <Compile Include="TablessControl.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="XMLEditor.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="XMLEditor.Designer.cs">
+      <DependentUpon>XMLEditor.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="AboutBox.resx">
       <DependentUpon>AboutBox.cs</DependentUpon>
     </EmbeddedResource>
@@ -157,6 +166,9 @@
     </Compile>
     <EmbeddedResource Include="SelectPackageDialog.resx">
       <DependentUpon>SelectPackageDialog.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="XMLEditor.resx">
+      <DependentUpon>XMLEditor.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
