--- a/GenericTSQLCollector/CollectionSetManager/packages.config
+++ b/GenericTSQLCollector/CollectionSetManager/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommandLineParser" version="1.9.71" targetFramework="net35" />
+  <package id="ICSharpCode.TextEditor" version="3.2.1.6466" targetFramework="net35" />
 </packages>
